@@ -104,16 +104,22 @@ Enhancements from 1.2
 
 - FileUtils.openOutputStream  [IO-107]
   - new method to open a FileOutputStream, creating parent directories if required
+- FileUtils.touch
+- FileUtils.copyURLToFile
+- FileUtils.writeStringToFile
+- FileUtils.writeByteArrayToFile
+- FileUtils.writeLines
+  - enhanced to create parent directories if required
 
 - FileUtils.isFileOlder
-  - add methods to check if a file is older (i.e. isFileOlder()) - counterparts
+  - new methods to check if a file is older (i.e. isFileOlder()) - counterparts
     to the existing isFileNewer() methods.
 
 - FileUtils.checksum, FileUtils.checksumCRC32
-  - add methods to create a checksum of a file
+  - new methods to create a checksum of a file
 
 - FileUtils.copyFileToDirectory  [IO-104]
-  - add variant that optionally retains the file date
+  - new variant that optionally retains the file date
 
 - FileDeleteStrategy
 - FileCleaner    [IO-56,IO-70]
